--- a/_posts/2021-08-23-s2ep1.md
+++ b/_posts/2021-08-23-s2ep1.md
@@ -1,7 +1,7 @@
 ---
 title:        "Show Me the Money!"
 date:         2021-08-23 09:00:00 +1200
-mp3-url:      "/assets/audio/ep0-Hello.MyNameIsBobby.mp3"
+mp3-url:      "/assets/audio/s2ep0-Hello.MyNameIsBobby.mp3"
 episode-type: trailer # or "full"
 season: 2
 explicit:     "no"
