Update to s1 tag for audio

--- a/_posts/2021-08-23-s1ep2.md
+++ b/_posts/2021-08-23-s1ep2.md
@@ -1,7 +1,7 @@
 ---
 title:        "Efficient Hours Played (EHP) Vs. FUN!"
 date:         2021-11-07 09:00:00 +1200
-mp3-url:      "/assets/audio/s1ep2-TrolleyOfValues"
+mp3-url:      "/assets/audio/s1ep2-TrolleyOfValues.mp3"
 episode-type: trailer # or "full"
 explicit:     "no"
 block:        "no" # no means it is published
