Updating .md files to match

--- a/_posts/2021-08-01-s1ep4.md
+++ b/_posts/2021-08-01-s1ep4.md
@@ -2,8 +2,8 @@
 title:        "Built Different"
 date:         2021-08-01 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep4-BuiltDifferent.mp3"
-episode-type: trailer # or "full"
-explicit:     "no"
+episode-type: full
+explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
