--- a/_posts/2021-08-08-s2ep0.md
+++ b/_posts/2021-08-08-s2ep0.md
@@ -4,7 +4,7 @@ date:         2021-08-08 09:00:00 +1200
 mp3-url:      "/assets/audio/s2ep0-Hello.MyNameIsBobby.mp3"
 episode-type: trailer # or "full"
 season: 2
-explicit:     "no"
+explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
