--- a/_posts/2021-07-14-s1ep0.md
+++ b/_posts/2021-07-14-s1ep0.md
@@ -3,7 +3,7 @@ title:        "Hello! My Name Is >>Bobby<<"
 date:         2021-07-14 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep0-Hello.MyNameIsBobby.mp3"
 episode-type: trailer # or "full"
-explicit:     "no"
+explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
