--- a/_posts/2021-07-25-s1ep3.md
+++ b/_posts/2021-07-25-s1ep3.md
@@ -2,8 +2,8 @@
 title:        "Layer 8 Protocols"
 date:         2021-07-25 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep3-Layer8Protocols.mp3"
-episode-type: trailer # or "full"
-explicit:     "no"
+episode-type: full
+explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
