--- a/_posts/2021-08-16-s1ep6.md
+++ b/_posts/2021-08-16-s1ep6.md
@@ -2,8 +2,8 @@
 title:        "Trial By Fire"
 date:         2021-08-16 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep6-TrialByFire.mp3"
-episode-type: trailer # or "full"
-explicit:     "no"
+episode-type: full
+explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
 excerpt_separator: <!--more-->
