Add season/episode in .md file

--- a/_posts/2021-08-23-s2ep1.md
+++ b/_posts/2021-08-23-s2ep1.md
@@ -4,6 +4,7 @@ date:         2021-08-23 09:00:00 +1200
 mp3-url:      "/assets/audio/s2ep0-Hello.MyNameIsBobby.mp3"
 episode-type: full
 season: 2
+episode: 1
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
