--- a/_posts/2021-11-07-s1ep1.md
+++ b/_posts/2021-11-07-s1ep1.md
@@ -3,6 +3,8 @@ title:        "Efficient Hours Played (EHP) Vs. FUN!"
 date:         2021-07-11 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep1-EHPvsFun.mp3"
 episode-type: full
+season: 1
+episode: 1
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
