--- a/_posts/2021-07-25-s1ep3.md
+++ b/_posts/2021-07-25-s1ep3.md
@@ -3,6 +3,8 @@ title:        "Layer 8 Protocols"
 date:         2021-07-25 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep3-Layer8Protocols.mp3"
 episode-type: full
+season: 1
+episode: 3
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
