--- a/_posts/2021-08-08-s1ep5.md
+++ b/_posts/2021-08-08-s1ep5.md
@@ -3,6 +3,8 @@ title:        "The Perfect Storm"
 date:         2021-08-08 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep5-ThePerfectStorm.mp3"
 episode-type: full
+season: 1
+episode: 5
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
