--- a/_posts/2021-08-16-s1ep6.md
+++ b/_posts/2021-08-16-s1ep6.md
@@ -3,6 +3,8 @@ title:        "Trial By Fire"
 date:         2021-08-16 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep6-TrialByFire.mp3"
 episode-type: full
+season: 1
+episode: 6
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
