--- a/_posts/2021-11-07-s1ep2.md
+++ b/_posts/2021-11-07-s1ep2.md
@@ -3,6 +3,8 @@ title:        "Trolley of Values"
 date:         2021-07-17 09:00:00 +1200
 mp3-url:      "/assets/audio/s1ep2-TrolleyOfValues.mp3"
 episode-type: full
+season: 1
+episode: 2
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
