--- a/_posts/2021-08-23-s2ep2.md
+++ b/_posts/2021-08-23-s2ep2.md
@@ -1,10 +1,10 @@
 ---
 title:        "Show Me the Money!"
 date:         2021-08-23 09:00:00 +1200
-mp3-url:      "/assets/audio/s2ep0-Hello.MyNameIsBobby.mp3"
+mp3-url:      "/assets/audio/s2ep2-ShowMeTheMoney.mp3"
 episode-type: full
 season: 2
-episode: 1
+episode: 2
 explicit:     "yes"
 block:        "no" # no means it is published
 layout: podcast
